--- a/model/model-home/src/main/res/layout/home_activity_main.xml
+++ b/model/model-home/src/main/res/layout/home_activity_main.xml
@@ -98,14 +98,15 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv_personal_center"
                 android:paddingStart="10dp"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/home_draw_background"
                 android:padding="4dp"
-                android:text="修改头像"
-                android:textColor="@color/white" />
+                android:text="个人中心"
+                android:textColor="@color/home_white" />
 
             <TextView
                 android:paddingStart="10dp"
@@ -115,7 +116,7 @@
                 android:background="@drawable/home_draw_background"
                 android:padding="4dp"
                 android:text="意见反馈"
-                android:textColor="@color/white" />
+                android:textColor="@color/home_white" />
 
             <TextView
                 android:paddingStart="10dp"
@@ -125,7 +126,7 @@
                 android:background="@drawable/home_draw_background"
                 android:padding="4dp"
                 android:text="支持一下"
-                android:textColor="@color/white" />
+                android:textColor="@color/home_white" />
 
         </LinearLayout>
     </LinearLayout>
