--- a/model/model-home/src/main/res/layout/home_fragment_page_1.xml
+++ b/model/model-home/src/main/res/layout/home_fragment_page_1.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:overScrollMode="never"
     android:paddingStart="20dp"
     android:paddingTop="20dp"
@@ -14,9 +15,10 @@
 
         <LinearLayout
             android:id="@+id/ll_top"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            app:layout_constraintEnd_toStartOf="@+id/home_imageview"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -33,6 +35,7 @@
                 android:id="@+id/tv_juzi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
                 android:text="@string/home_juzi"
                 android:textColor="@color/black40"
                 android:textSize="12sp" />
