--- a/model/model-home/src/main/res/layout/home_fragment_page_2.xml
+++ b/model/model-home/src/main/res/layout/home_fragment_page_2.xml
@@ -7,16 +7,16 @@
 
 
    <Button
-       android:id="@+id/infoBtn"
+       android:id="@+id/bt_simple_brv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:text="Toast-Info"/>
+       android:text="简单使用"/>
 
     <Button
-        android:id="@+id/succeedBtn"
+        android:id="@+id/bt_multi_type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Toast-Succeed"/>
+        android:text="多类型"/>
 
     <Button
         android:id="@+id/errorBtn"
