--- a/model/model-airpods/src/main/res/values/colors.xml
+++ b/model/model-airpods/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="airpods_teal_700">#FF018786</color>
     <color name="airpods_black">#FF000000</color>
     <color name="airpods_white">#FFFFFFFF</color>
+
+    <color name="airpods_colorBackground">#f1f1f1</color>
 </resources>
