--- a/app/src/main/res/xml/ando_paths.xml
+++ b/app/src/main/res/xml/ando_paths.xml
@@ -27,4 +27,14 @@
         name="ando_external_path"
         path="." />
 
+    <!--腾讯应用内更新用-->
+    <!-- /storage/emulated/0/Download/${applicationId}/.beta/apk-->
+    <external-path
+        name="beta_external_path"
+        path="Download/" />
+    <!--/storage/emulated/0/Android/data/${applicationId}/files/apk/-->
+    <external-path
+        name="beta_external_files_path"
+        path="Android/data/" />
+
 </paths>
