--- a/model/model-home/src/main/res/layout/home_activity_main.xml
+++ b/model/model-home/src/main/res/layout/home_activity_main.xml
@@ -20,6 +20,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:cardBackgroundColor="#80FFFFFF"
             app:cardElevation="0dp" />
         <!--卡片2-->
@@ -28,6 +32,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:cardBackgroundColor="#90FFFFFF"
             app:cardElevation="0dp" />
         <!--首页-->
@@ -35,6 +43,10 @@
             android:id="@+id/cardView_3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:cardBackgroundColor="?android:attr/windowBackground"
             app:cardElevation="0dp">
 
@@ -77,10 +89,10 @@
         android:layout_gravity="start"
         android:clickable="true"
         android:focusable="true"
-        android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <TextView
+            android:layout_gravity="center"
             android:id="@+id/menu_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -92,7 +104,7 @@
             android:typeface="serif" />
 
         <LinearLayout
-            android:layout_width="180dp"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:orientation="vertical">
@@ -100,7 +112,8 @@
             <TextView
                 android:id="@+id/tv_personal_center"
                 android:paddingStart="10dp"
-                android:layout_width="120dp"
+                android:paddingEnd="10dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/home_draw_background"
@@ -110,7 +123,8 @@
 
             <TextView
                 android:paddingStart="10dp"
-                android:layout_width="120dp"
+                android:paddingEnd="10dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/home_draw_background"
@@ -120,7 +134,8 @@
 
             <TextView
                 android:paddingStart="10dp"
-                android:layout_width="120dp"
+                android:paddingEnd="10dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/home_draw_background"
