--- a/model/model-login/src/main/res/layout/login_activity_login.xml
+++ b/model/model-login/src/main/res/layout/login_activity_login.xml
@@ -12,6 +12,8 @@
         android:id="@+id/loginBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/shape_rectangle_solid"
         android:text="开始登录" />
 
     <Button
@@ -19,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/loginBtn"
+        android:background="@drawable/shape_rectangle_solid"
         android:text="获取用户" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
